# master_thesis

./: .env.default  .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml
config/: config.yaml  evaluation_roest.yaml  evaluation_whisper.yaml
config/dataset/: base_dataset.yaml  coral.yaml  fleurs.yaml  lillelyd_full.yaml  lillelyd_test.yaml
config/eval/: base_eval.yaml  debug.yaml  debug_large.yaml  hviske-v2.yaml  hviske-v3-conversation.yaml  roest-wav2vec2-1B-v2.yaml  roest-wav2vec2-2B-v2.yaml  roest-wav2vec2-315m-v2.yaml  roest-whisper-large-v1.yaml  seamless-m4t-v2-large.yaml  wav2vec2-xls-r-2b.yaml  wav2vec2.yaml  whisper-large-v3-turbo.yaml  whisper-large-v3.yaml  whisper-tiny.yaml
config/model/: base_model.yaml  canary-1b-v2.yaml  canary-1b-v2_finetune.yaml  canary-1b-v2_finetune_pitch-shift.yaml  canary-1b-v2_finetune_spec-aug.yaml  canary-1b-v2_finetune_spec-aug_pitch-shift.yaml  canary-1b-v2_finetune_spec-aug_speed-perturbations.yaml  canary-1b-v2_finetune_spec-aug_speed-perturbations_pitch-shift.yaml  canary-1b-v2_finetune_speed-perturbations.yaml  canary-1b-v2_finetune_speed-perturbations_pitch-shift.yaml  canary-1b-v2_finetuned_spec-aug.yaml  canary-1b-v2_finetuned_speed_perturbations.yaml  hviske-v2.yaml  hviske-v3-conversation.yaml  parakeet-tdt-0.6b-v3-finetune_spec-aug_speech-perturbations.yaml  parakeet-tdt-0.6b-v3.yaml  parakeet-tdt-0.6b-v3_finetune.yaml  parakeet-tdt-0.6b-v3_finetune_pitch-shift.yaml  parakeet-tdt-0.6b-v3_finetune_spec-aug.yaml  parakeet-tdt-0.6b-v3_finetune_spec-aug_pitch-shift.yaml  parakeet-tdt-0.6b-v3_finetune_spec-aug_speed-perturbations.yaml  parakeet-tdt-0.6b-v3_finetune_spec-aug_speed-perturbations_pitch-shift.yaml  parakeet-tdt-0.6b-v3_finetune_speed-perturbations.yaml  parakeet-tdt-0.6b-v3_finetune_speed-perturbations_pitch-shift.yaml  parakeet-tdt-0.6b-v3_finetuned_spec-aug.yaml  parakeet-tdt-0.6b-v3_finetuned_speed-perturbations.yaml  roest-wav2vec2-1B-v2.yaml  roest-wav2vec2-2B-v2.yaml  roest-wav2vec2-315m-v2.yaml  roest-whisper-large-v1.yaml  seamless-m4t-v2-large.yaml  wav2vec2-xls-r-2b.yaml  whisper-large-v3-turbo.yaml  whisper-large-v3.yaml  whisper-tiny.yaml
jobs/: download_nemo_dataset.py  prepare_evaluation.py  submit_cv.py  submit_evaluation.py  submit_model_finetuning.py  submit_model_train.py  submit_oomptimizer.py  submit_train_kenlm.py  test_coral_wav2vec2.0-2b.sh
master_thesis/: __init__.py  dataset.py  features.py  plots.py
master_thesis/modeling/: predict.py  train.py
nemo_config/: canary-1b-v2-finetune.yaml  canary-1b-v2-finetune_12-buckets.yaml  canary-1b-v2-finetune_30-buckets.yaml  canary-1b-v2-finetune_30-buckets_pitch-shift.yaml  canary-1b-v2-finetune_spec-aug.yaml  canary-1b-v2-finetune_spec-aug_12-buckets.yaml  canary-1b-v2-finetune_spec-aug_30-buckets.yaml  canary-1b-v2-finetune_spec-aug_speech-perturbations_30-buckets.yaml  canary-1b-v2-finetune_spec-aug_speech_perturbations_30-buckets.yaml  canary-1b-v2-finetune_speech-perturbations_12-buckets.yaml  canary-1b-v2-finetune_speech-perturbations_30-buckets.yaml  canary-1b-v2-finetune_speech_perturbations_12-buckets.yaml  canary-1b-v2-finetune_speech_perturbations_30-buckets.yaml  canary-finetune.yaml  canary-finetune_30-buckets_pitch-shift.yaml  canary-finetune_pitch-shift.yaml  canary-finetune_spec-aug.yaml  canary-finetune_spec-aug_30-buckets.yaml  canary-finetune_spec-aug_pitch-shift.yaml  canary-finetune_spec-aug_speech-perturbations.yaml  canary-finetune_spec-aug_speech-perturbations_30-buckets.yaml  canary-finetune_spec-aug_speech-perturbations_pitch-shift.yaml  canary-finetune_spec-aug_speed-perturbations.yaml  canary-finetune_spec-aug_speed-perturbations_lillelyd.yaml  canary-finetune_spec-aug_speed-perturbations_ll.yaml  canary-finetune_spec-aug_speed-perturbations_ll_pitch-shift.yaml  canary-finetune_spec-aug_speed-perturbations_ll_pitch-shift_speed-perturbations.yaml  canary-finetune_spec-aug_speed-perturbations_ll_spec-aug.yaml  canary-finetune_spec-aug_speed-perturbations_ll_spec-aug_pitch-shift.yaml  canary-finetune_spec-aug_speed-perturbations_ll_spec-aug_pitch-shift_speed-perturbations.yaml  canary-finetune_spec-aug_speed-perturbations_ll_spec-aug_speed-perturbations.yaml  canary-finetune_spec-aug_speed-perturbations_ll_speed-perturbations.yaml  canary-finetune_spec-aug_speed-perturbations_pitch-shift.yaml  canary-finetune_speech-perturbations.yaml  canary-finetune_speech-perturbations_30-buckets.yaml  canary-finetune_speech-perturbations_pitch-shift.yaml  canary-finetune_speed-perturbations.yaml  canary-finetune_speed-perturbations_pitch-shift.yaml  canary-linear-finetune.yaml  parakeet-finetune.yaml  (+39 more)
nemo_config/exp_manager/: base_finetune.yaml  base_single.yaml  canary-1b-v2.yaml
nemo_config/model/: base_finetune.yaml  base_pitch-shift.yaml  canary-1b-v2.yaml  canary-1b-v2_12-buckets.yaml  canary-1b-v2_12-buckets_speech_perturbations.yaml  parakeet.yaml  (+8 more)
notebooks/: coral_analysis.ipynb  coral_val_wer_canary.csv  coral_val_wer_parakeet.csv  emotale_analysis.ipynb  evaluate_model.ipynb  fleurs_val_wer_canary.csv  fleurs_val_wer_parakeet.csv  latex_tables.ipynb  lillelyd.ipynb  lillelyd_finetune.ipynb  lillelyd_train_wer_canary.csv  lillelyd_train_wer_parakeet.csv  merged_wer.csv  test_nemo.ipynb  venn.ipynb  whisper_lora.ipynb
(+126 files in other folders)
